# rodio

./: components.json  eslint.config.cjs  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: events.rs  main.rs
src-tauri/src/commands/: image_optimiser.rs  image_stat.rs  is_image.rs  mod.rs  open_in_fm.rs  shrink_image.rs
src-tauri/src/utils/: image_utils.rs
src/commands/: image-optimiser.ts  image-stat.ts  is-image.ts  open-in-fm.ts
src/components/image/: image.tsx  use-optimised-image.tsx
src/components/project/: class-list.tsx  export-modal.tsx  image-list.tsx  image-preview.tsx  label-anchors.tsx  label-box.tsx  label-list.tsx  new-label-box.tsx  resizable-rect.tsx  use-current.ts  use-image-container.ts  use-image-preview-cursors.ts  use-label-actions.ts  use-save-labels.tsx
src/components/project/export/: export-dataset-grid.tsx  export-distribution-inputs.tsx  export-in-progress.tsx  export-modal-footer.tsx  export-modal.tsx  export-preview.tsx  export-progress.tsx  export-store.ts  (+3 more)
src/components/ui/: alert.tsx  color-picker.tsx  input.tsx
src/lib/: async.ts  db.ts  file.ts  frontend-events.ts  query-keys.ts  rodio-app.ts  rodio-project.ts  rodio.ts  use-breakpoint.ts  use-keypress.ts  use-label-classes.ts  use-prevent-backspace.ts  utils.ts
src/routes/: __root.tsx  index.lazy.tsx  new-project.lazy.tsx  project.$path.tsx
src/stores/: app-store.tsx  current-project-file-store.tsx  current-project-store.tsx  save-store.tsx
(+5 files in other folders)
