[package]
name = "rodio"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-remove-dir", "window-close",
    "clipboard-all",
    "path-all",
    "fs-remove-file",
    "fs-read-dir",
    "fs-exists",
    "fs-read-file",
    "fs-write-file",
    "fs-create-dir",
    "fs-rename-file",
    "protocol-asset",
    "dialog-all",
    "shell-open",
] }
sha2 = "0.10.8"
base64 = "0.22.1"
mime_guess = "2.0.4"
image = "0.25.1"
kamadak-exif = "0.5.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "1"
tauri-specta = { version = "1", features = ["javascript", "typescript"] }
derivative = "2.2.0"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]                                   # or "postgres", or "mysql"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
